--- a/index.html
+++ b/index.html
@@ -488,5 +488,11 @@
         </div>
       </div>
     </footer>
+
+    <!-- BACKDROP -->
+
+    <div class="backdrop">
+      <div class="modal"></div>
+    </div>
   </body>
 </html>
