--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- BACKDROP -->
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="close-btn">
+          <svg
+            width="8"
+            height="8"
+            aria-label="modal close icon"
+            class="close-btn-icon"
+          >
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
     <!-- Header -->
 
     <header class="header">
@@ -490,9 +507,5 @@
     </footer>
 
     <!-- BACKDROP -->
-
-    <div class="backdrop">
-      <div class="modal"></div>
-    </div>
   </body>
 </html>
