--- a/index.html
+++ b/index.html
@@ -34,6 +34,95 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="review-form-description">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="review-form">
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-name">Name</label>
+            <input
+              class="review-form-input"
+              type="text"
+              id="user-name"
+              name="user_name"
+              required
+            />
+            <svg
+              class="review-form-field-icon"
+              width="18"
+              height="18"
+              aria-label="user icon"
+            >
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-phone"
+              >Phone</label
+            >
+            <input
+              class="review-form-input"
+              type="tel"
+              id="user-phone"
+              name="user_phone"
+              required
+            />
+            <svg
+              class="review-form-field-icon"
+              width="18"
+              height="18"
+              aria-label="phone icon"
+            >
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-email"
+              >Email</label
+            >
+            <input
+              class="review-form-input"
+              type="email"
+              id="user-email"
+              name="user_email"
+              required
+            />
+            <svg
+              class="review-form-field-icon"
+              width="18"
+              height="18"
+              aria-label="email icon"
+            >
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              name="user_comment"
+              id="user-comment"
+              class="review-form-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="review-form-checkbox-wrapper">
+            <input
+              class="review-form-checkbox"
+              type="checkbox"
+              id="user-privacy"
+              name="user_privacy"
+              value="true"
+              required
+            />
+            <label for="user-privacy" class="review-form-checkbox-label">
+              I accept the terms and conditions of the
+              <a class="review-form-privacy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="review-form-submit" type="submit">Send</button>
+        </form>
       </div>
     </div>
 
