--- a/index.html
+++ b/index.html
@@ -40,70 +40,76 @@
         <form class="review-form">
           <div class="review-form-field-wrapper">
             <label class="review-form-field-label" for="user-name">Name</label>
-            <input
-              class="review-form-input"
-              type="text"
-              id="user-name"
-              name="user_name"
-              required
-            />
-            <svg
-              class="review-form-field-icon"
-              width="18"
-              height="18"
-              aria-label="user icon"
-            >
-              <use href="./images/icons.svg#icon-person-black"></use>
-            </svg>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                type="text"
+                id="user-name"
+                name="user_name"
+                required
+              />
+              <svg
+                class="review-form-field-icon"
+                width="18"
+                height="18"
+                aria-label="user icon"
+              >
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="review-form-field-wrapper">
             <label class="review-form-field-label" for="user-phone"
               >Phone</label
             >
-            <input
-              class="review-form-input"
-              type="tel"
-              id="user-phone"
-              name="user_phone"
-              required
-            />
-            <svg
-              class="review-form-field-icon"
-              width="18"
-              height="18"
-              aria-label="phone icon"
-            >
-              <use href="./images/icons.svg#icon-phone-black"></use>
-            </svg>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                type="tel"
+                id="user-phone"
+                name="user_phone"
+                required
+              />
+              <svg
+                class="review-form-field-icon"
+                width="18"
+                height="24"
+                aria-label="phone icon"
+              >
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="review-form-field-wrapper">
             <label class="review-form-field-label" for="user-email"
               >Email</label
             >
-            <input
-              class="review-form-input"
-              type="email"
-              id="user-email"
-              name="user_email"
-              required
-            />
-            <svg
-              class="review-form-field-icon"
-              width="18"
-              height="18"
-              aria-label="email icon"
-            >
-              <use href="./images/icons.svg#icon-email-black"></use>
-            </svg>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                type="email"
+                id="user-email"
+                name="user_email"
+                required
+              />
+              <svg
+                class="review-form-field-icon"
+                width="18"
+                height="24"
+                aria-label="email icon"
+              >
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="review-form-field-wrapper">
             <label class="review-form-field-label" for="user-comment"
               >Comment</label
             >
             <textarea
+              class="review-form-comment"
               name="user_comment"
               id="user-comment"
-              class="review-form-comment"
               placeholder="Text input"
             ></textarea>
           </div>
