--- a/index.html
+++ b/index.html
@@ -115,14 +115,24 @@
           </div>
           <div class="review-form-checkbox-wrapper">
             <input
-              class="review-form-checkbox"
+              class="review-form-checkbox visually-hidden"
               type="checkbox"
               id="user-privacy"
               name="user_privacy"
               value="true"
               required
             />
-            <label for="user-privacy" class="review-form-checkbox-label">
+            <label class="review-form-checkbox-label" for="user-privacy">
+              <span class="review-form-own-checkbox">
+                <svg
+                  class="review-form-own-checkbox-icon"
+                  width="16"
+                  height="16"
+                  aria-label="checkmark icon"
+                >
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the
               <a class="review-form-privacy-link" href="">Privacy Policy</a>
             </label>
