--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
               <span class="review-form-own-checkbox">
                 <svg
                   class="review-form-own-checkbox-icon"
-                  width="16"
-                  height="16"
+                  width="10"
+                  height="8"
                   aria-label="checkmark icon"
                 >
                   <use href="./images/icons.svg#icon-click"></use>
@@ -605,6 +605,27 @@
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
+            </li>
+          </ul>
+        </div>
+        <div class="subscribe-container">
+          <p class="subscribe-text">Subscribe</p>
+          <ul class="subscribe-list">
+            <li class="subscribe-item">
+              <input
+                class="review-form-subscribe"
+                type="email"
+                name="user_email"
+                required
+              />
+            </li>
+            <li class="subscribe-item">
+              <button class="subscribe-button">
+                Subscribe
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
             </li>
           </ul>
         </div>
