--- a/index.html
+++ b/index.html
@@ -620,10 +620,10 @@
               />
             </li>
             <li class="subscribe-item">
-              <button class="subscribe-button">
+              <button class="subscribe-btn">
                 Subscribe
-                <svg class="subscribe-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
+                <svg class="subscribe-icon" width="24" height="20">
+                  <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
             </li>
@@ -631,7 +631,5 @@
         </div>
       </div>
     </footer>
-
-    <!-- BACKDROP -->
   </body>
 </html>
