--- a/index.html
+++ b/index.html
@@ -610,24 +610,11 @@
         </div>
         <div class="subscribe-container">
           <p class="subscribe-text">Subscribe</p>
-          <ul class="subscribe-list">
-            <li class="subscribe-item">
-              <input
-                class="review-form-subscribe"
-                type="email"
-                name="user_email"
-                required
-              />
-            </li>
-            <li class="subscribe-item">
-              <button class="subscribe-btn">
-                Subscribe
-                <svg class="subscribe-icon" width="24" height="20">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
-            </li>
-          </ul>
+          <form class="subscribe-form" action="">
+            <label class="subscribe-label" for="">
+              <input type="email" name="user_email" />
+            </label>
+          </form>
         </div>
       </div>
     </footer>
