--- a/index.html
+++ b/index.html
@@ -612,7 +612,12 @@
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form" action="">
             <label class="subscribe-label" for="">
-              <input type="email" name="user_email" />
+              <input
+                class="subscribe-input"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+              />
             </label>
           </form>
         </div>
