--- a/index.html
+++ b/index.html
@@ -22,126 +22,6 @@
   <body>
     <!-- BACKDROP -->
 
-    <div class="backdrop">
-      <div class="modal">
-        <button class="close-btn">
-          <svg
-            width="8"
-            height="8"
-            aria-label="modal close icon"
-            class="close-btn-icon"
-          >
-            <use href="./images/icons.svg#icon-close-black"></use>
-          </svg>
-        </button>
-        <p class="review-form-description">
-          Leave your contacts and we will call you back
-        </p>
-        <form class="review-form">
-          <div class="review-form-field-wrapper">
-            <label class="review-form-field-label" for="user-name">Name</label>
-            <div class="review-form-input-wrapper">
-              <input
-                class="review-form-input"
-                type="text"
-                id="user-name"
-                name="user_name"
-                required
-              />
-              <svg
-                class="review-form-field-icon"
-                width="18"
-                height="18"
-                aria-label="user icon"
-              >
-                <use href="./images/icons.svg#icon-person-black"></use>
-              </svg>
-            </div>
-          </div>
-          <div class="review-form-field-wrapper">
-            <label class="review-form-field-label" for="user-phone"
-              >Phone</label
-            >
-            <div class="review-form-input-wrapper">
-              <input
-                class="review-form-input"
-                type="tel"
-                id="user-phone"
-                name="user_phone"
-                required
-              />
-              <svg
-                class="review-form-field-icon"
-                width="18"
-                height="24"
-                aria-label="phone icon"
-              >
-                <use href="./images/icons.svg#icon-phone-black"></use>
-              </svg>
-            </div>
-          </div>
-          <div class="review-form-field-wrapper">
-            <label class="review-form-field-label" for="user-email"
-              >Email</label
-            >
-            <div class="review-form-input-wrapper">
-              <input
-                class="review-form-input"
-                type="email"
-                id="user-email"
-                name="user_email"
-                required
-              />
-              <svg
-                class="review-form-field-icon"
-                width="18"
-                height="24"
-                aria-label="email icon"
-              >
-                <use href="./images/icons.svg#icon-email-black"></use>
-              </svg>
-            </div>
-          </div>
-          <div class="review-form-field-wrapper">
-            <label class="review-form-field-label" for="user-comment"
-              >Comment</label
-            >
-            <textarea
-              class="review-form-comment"
-              name="user_comment"
-              id="user-comment"
-              placeholder="Text input"
-            ></textarea>
-          </div>
-          <div class="review-form-checkbox-wrapper">
-            <input
-              class="review-form-checkbox visually-hidden"
-              type="checkbox"
-              id="user-privacy"
-              name="user_privacy"
-              value="true"
-              required
-            />
-            <label class="review-form-checkbox-label" for="user-privacy">
-              <span class="review-form-own-checkbox">
-                <svg
-                  class="review-form-own-checkbox-icon"
-                  width="10"
-                  height="8"
-                  aria-label="checkmark icon"
-                >
-                  <use href="./images/icons.svg#icon-click"></use>
-                </svg>
-              </span>
-              I accept the terms and conditions of the
-              <a class="review-form-privacy-link" href="">Privacy Policy</a>
-            </label>
-          </div>
-          <button class="review-form-submit" type="submit">Send</button>
-        </form>
-      </div>
-    </div>
-
     <!-- Header -->
 
     <header class="header">
@@ -610,13 +490,14 @@
         </div>
         <div class="subscribe-container">
           <p class="subscribe-text">Subscribe</p>
-          <form class="subscribe-form" action="">
-            <label class="subscribe-label" for="">
+          <form class="subscribe-form">
+            <label class="subscribe-label" for="subscribe-email">
               <input
                 class="subscribe-input"
                 type="email"
                 name="user-email"
                 placeholder="E-mail"
+                id="subscribe-email"
               />
             </label>
             <button class="subscribe-btn" type="submit">
@@ -629,5 +510,127 @@
         </div>
       </div>
     </footer>
+
+    <!-- BACKDROP -->
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="close-btn" type="button">
+          <svg
+            width="8"
+            height="8"
+            aria-label="modal close icon"
+            class="close-btn-icon"
+          >
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="review-form-description">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="review-form">
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-name">Name</label>
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                type="text"
+                id="user-name"
+                name="user_name"
+                required
+              />
+              <svg
+                class="review-form-field-icon"
+                width="18"
+                height="18"
+                aria-label="user icon"
+              >
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-phone"
+              >Phone</label
+            >
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                type="tel"
+                id="user-phone"
+                name="user_phone"
+                required
+              />
+              <svg
+                class="review-form-field-icon"
+                width="18"
+                height="24"
+                aria-label="phone icon"
+              >
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-email"
+              >Email</label
+            >
+            <div class="review-form-input-wrapper">
+              <input
+                class="review-form-input"
+                type="email"
+                id="user-email"
+                name="user_email"
+                required
+              />
+              <svg
+                class="review-form-field-icon"
+                width="18"
+                height="24"
+                aria-label="email icon"
+              >
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="review-form-field-wrapper">
+            <label class="review-form-field-label" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              class="review-form-comment"
+              name="user_comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="review-form-checkbox-wrapper">
+            <input
+              class="review-form-checkbox visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              name="user_privacy"
+              value="true"
+              required
+            />
+            <label class="review-form-checkbox-label" for="user-privacy">
+              <span class="review-form-own-checkbox">
+                <svg
+                  class="review-form-own-checkbox-icon"
+                  width="10"
+                  height="8"
+                  aria-label="checkmark icon"
+                >
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="review-form-privacy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="review-form-submit" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
