--- a/index.html
+++ b/index.html
@@ -536,13 +536,13 @@
                 class="review-form-input"
                 type="text"
                 id="user-name"
-                name="user_name"
+                name="user-name"
                 required
               />
               <svg
                 class="review-form-field-icon"
                 width="18"
-                height="18"
+                height="24"
                 aria-label="user icon"
               >
                 <use href="./images/icons.svg#icon-person-black"></use>
@@ -599,7 +599,7 @@
             >
             <textarea
               class="review-form-comment"
-              name="user_comment"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
@@ -609,7 +609,7 @@
               class="review-form-checkbox visually-hidden"
               type="checkbox"
               id="user-privacy"
-              name="user_privacy"
+              name="user-privacy"
               value="true"
               required
             />
